* add great_war mode (surtur2 and Triplelk)

* update triplea_linux.sh (Daniel Roethlisberger)

* show messages when people join/leave chat (sgb)

* fix scroll bug where map would jump when mouse scrolled in non wrappable maps (sgb)

* make convoy zones more transparent (sgb)

* fix neutral fighting bug (sgb)

* fix spelling mstakes in classic map (sgb, RogerCooper)

* add max button to place dialog where number of units that can be placed is limited (sgb)

* fix bug [ 1563239 ] Bad scroll increment for scrollbars (sgb)

* fix bug  [ 1563227 ] Continue button does not show up (sgb)

Changes for 0.8.3

* make odds calculator use MustFightBattle, update ui (sgb)

* allow scaling of auto placement finder.  On the command line, type the scale after the command, 
eg "java -classpath triplea.jar util/image/AutoPlacementFinder 0.5" (sgb)

* add map decoration images.  create a file called decorations.txt in the map directory.  The format is the same as place.txt, with an image name, then list of points where
the image should be drawn (multiple points are fine).  The image name should be the name of a file in the misc image folder (the same folder that has vc.png) (sgb)

* disable territory name drawing for territories listed in map.properties with a property like dont_draw_territory_names=Germany,Japan (sgb)

* allow for map scaling (sgb)

* let ai play in multiplayer games (sgb)

* fix [ 1533252 ] problem clearing out pbem (sgb)

* make the game look better on a mac (sgb)

* better factory images (eleazar)

* lhtr hb rules (not sure if low luck is correct) (sgb)

* lobby server/client (sgb)

* you can kick players out of a game on startup screen (sgb)

* add odds calculator (zengland)

* fix bug [ 1505192 ] air land in conquered territory (sgb)

* allow networked games to be password protected (sgb)

* for mac and linux, save games in home folder (sgb)

* add convoy centers in europe map (iron cross)

* put saved games in users home directory (sgb)
