@@ -246,6 +246,7 @@ public class TileManager
             // draw a convoy overlay
             if(TerritoryAttachment.get(territory) != null)
                 drawing.add(new ConvoyZoneDrawable(territory.getName()));
+            drawing.add(new SeaZoneOutlineDrawable(territory.getName()));
         } 
         
         drawing.add(new TerritoryNameDrawable(territory.getName(), m_uiContext));
